# DragonProbe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.dappermime  LICENSE.jtagenum  LICENSE.pico-examples  LICENSE.picoprobe-sump  LICENSE.swdscan  Makefile  README.md  cdc_serprog.c  dmctl.py  dmctl2.py  dmctl3.py  main.c  protos.h  rtconf.c  serprog.h  thread.h  tusb_config.h  usb_descriptors.c
CMSIS-DAP/Firmware/Include/: DAP.h
CMSIS-DAP/Firmware/Source/: DAP.c  DAP_vendor.c  JTAG_DP.c  SWO.c  SW_DP.c
bsp/default/: DAP_config.h  cdc_uart.c  i2c_tinyusb.c  protocfg.h  spi_serprog.c  tempsensor.c  unique.c  unique.h
bsp/rp2040/: DAP_config.h  board.h  bsp-info.h  bsp-storage.h  cdc_stdio.c  cdc_uart.c  i2c_tinyusb.c  linkdefs.h  picoprobe_config.h  pinout.h  protocfg.h  spi_serprog.c  tempsensor.c  unique.c  unique.h
bsp/rp2040/m_default/: 1wire.c  bsp-feature.h  cdc_uart.c  dap_jtag.c  dap_jtag.pio  dap_swd.c  dap_swd.pio  dap_swo.c  dap_uart.c  i2c_tinyusb.c  pinout.h  spi_serprog.c  swo_manchester_encoding.pio  swo_uart_rx.pio  tempsensor.c  uart_rx.pio
bsp/rp2040/m_ftdi/: asyncbb.c  base.c  bsp-feature.h  cpufifo.c  fifo.c  ftdi_hw.c  ftdi_hw.h  ftdi_proto.c  ftdi_uart_rx.pio  ftdi_uart_tx.pio  mcuhost.c  mpsse.c  pinout.h  syncbb.c  uart.c
bsp/rp2040/m_isp/: bsp-feature.h  mehfet_hw.c  pinout.h  sbw.pio  sbw_hw.c  sbw_hw.h
bsp/rp2040/m_jscan/: bsp-feature.h  jscan_hw.c  jscan_hw.h
bsp/rp2040/m_sump/: bsp-feature.h  sump_hw.c  sump_hw.h
bsp/rp2040/pico/: assert.h
bsp/stm32f072disco/: DAP_config.h  cdc_stdio.c  cdc_uart.c  i2c_tinyusb.c  protocfg.h  spi_serprog.c  unique.c  unique.h
host/: .gitignore  10-dragnbus.rules  42-dragonprobe.rules  dbctl.py  dmctl.py  dmctl.sh  dpctl.sh  requirements-xvc2dap.txt  setup.py  xvc2dap.py
host/arch/: PKGBUILD
host/dmctl/: __init__.py  __main__.py  commands.py  connection.py  protocol.py
host/dpctl/: __init__.py  __main__.py  commands.py  connection.py  protocol.py
host/i2c-tiny-usb-misc/: i2c-tiny-usb-proto.txt  i2c-tiny-usb.c
host/modules/: .gitignore  Makefile  dmj-char.c  dmj-hwmon.c  dmj.c  dmj.h  dragonprobe-char.c  dragonprobe-hwmon.c  dragonprobe.c  dragonprobe.h  i2c-dmj.c  i2c-dragonprobe.c  spi-dmj.c  spi-dragonprobe.c
i2c-tiny-usb-misc/: Makefile  i2c-tiny-usb-proto.txt  i2c-tiny-usb.c
libco/: libco.S  libco.h
scripts/: configure_dev.sh  fix_clang_db.py
src/: .gitignore  alloc.c  alloc.h  cdc_dynexec.c  cdc_serprog.c  dynexec.S  i2ctinyusb.c  i2ctinyusb.h  info.h  main.c  mode.h  modeset.c  no_malloc.c  protos.h  rtconf.c  rtconf.h  serprog.h  storage.c  storage.h  storage_internal.h  storage_save.c  tempsensor.c  tempsensor.h  thread.c  thread.h  tusb_config.h  tusb_plt.S  usb_descriptors.c  usbstdio.h  util.h  vnd_cfg.c  vnd_cfg.h  vnd_i2ctinyusb.c
src/m_default/: 0def.c  1wire.h  _default.c  cdc.h  cdc_serprog.c  i2ctinyusb.h  serprog.h  tempsensor.c  tempsensor.h  vnd_i2ctinyusb.c
src/m_default2/: 0def.c
src/m_ftdi/: _ftdi.c  ftdi.c  ftdi.h
src/m_isp/: _isp.c  mehfet.c  mehfet.h
src/m_jscan/: _jscan.c  jscan.c  jscan.h
src/m_sump/: _sump.c  cdc_sump.c  sump.h
src/t/: tstest.c
